# rekki

./: .gitignore  .mailmap  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  greetings.yml  publish.yml
docs/: supervision.md
rekki-core/: pyproject.toml
rekki-service/: pyproject.toml
rktr/: pyproject.toml
rktr-stream/: pyproject.toml
rktr-stream/src/rktr/stream/: rx.py
rktr/src/rktr/actor/: arbiter.py
rktr/src/rktr/actor/types/: actor.py
