[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "rekki-core"
version = "0.0.1"
description = "Reactive programming model for Python"
authors = [{ name = "Lanqing Huang", email = "lqhuang@outlook.com" }]
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
readme = "README.md"
dependencies = ["rich", "anyio", "attrs"]

[tool.pdm.build]
package-dir = "."
