[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "rktr"
version = "0.1.0"
description = "Reactive programming model for Python"
authors = [{ name = "Lanqing Huang", email = "lqhuang@outlook.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = ["rekki-core"]

[tool.pdm.build]
package-dir = "."
includes = ["rekki"]
