[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "rekki-service"
version = "0.0.1"
description = "Reactive programming model for Python"
authors = [{ name = "Lanqing Huang", email = "lqhuang@outlook.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "BSD-3-Clause" }
dependencies = ["rekki-core"]

[tool.pdm.build]
package-dir = "."
includes = ["rekki"]
