[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "rktr"
version = "0.1.0"
description = "Reactive programming model for Python"
authors = [{ name = "Lanqing Huang", email = "lqhuang@outlook.com" }]
dependencies = ["rich>=12.5.1", "anyio>=3.6.1", "attrs>=22.1.0"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache-2.0" }
[project.optional-dependencies]

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.971",
    "typing-extensions>=4.3.0",
    "flake8>=5.0.4",
    "isort>=5.10.1",
    "pytest>=7.1.3",
    "pytest-anyio>=0.0.0",
    "black>=22.8.0",
]
